# financial-agent-spdd

./: .gitignore  README.md  docker-compose.yml  start
codebases/financial-agent-api/: .env.example  ONBOARDING_java_node.md  README.md  pyproject.toml
codebases/financial-agent-api/scripts/: start_api.sh
codebases/financial-agent-api/src/app/: __init__.py
codebases/financial-agent-api/src/app/core/: __init__.py  config.py
codebases/financial-agent-api/src/financial_agent_api/: main.py
codebases/financial-agent-api/src/financial_agent_api/agent/: graph.py  runner.py  state.py
codebases/financial-agent-api/src/financial_agent_api/agent/tools/: retrieve_docs_tool.py  (+3 more)
codebases/financial-agent-api/src/financial_agent_api/core/: config.py  database.py  exceptions.py  logging.py  services_container.py
codebases/financial-agent-api/src/financial_agent_api/db/: schema.py
codebases/financial-agent-api/src/financial_agent_api/models/: __init__.py  agent.py  retrieval.py  safety.py  scenario.py
codebases/financial-agent-api/src/financial_agent_api/routers/: agent.py
codebases/financial-agent-api/src/financial_agent_api/scripts/: __init__.py  embed_starter_docs.py  ingest_public_data.py  initialize_data.py
codebases/financial-agent-api/src/financial_agent_api/services/: llm_client.py  llm_service.py  retrieval_service.py
codebases/financial-agent-api/tests/: test_agent_endpoint.py  test_config.py  test_db_schema.py  test_graph.py  test_health.py  test_ingestion_scripts.py  test_llm_service.py  test_logging.py  test_retrieval_service.py  test_tools.py
(+35 files in other folders)
